# crewai-agentic-framework

./: .gitignore  README.md
news_agent/: news_article_2025-11-28_02-21-54.md  pyproject.toml
news_agent/src/news_agent/: crew.py  main.py
news_agent/src/news_agent/config/: agents.yaml  tasks.yaml
poem_flow/: README.md  poem.txt  pyproject.toml
poem_flow/src/poem_flow/: main.py
poem_flow/src/poem_flow/crews/poem_crew/: poem_crew.py
poem_flow/src/poem_flow/crews/poem_crew/config/: agents.yaml  tasks.yaml
simple_agent/: README.md  pyproject.toml  report.md
simple_agent/src/simple_agent/: crew.py  main.py
