[project]
name = "simple_agent"
version = "0.1.0"
description = "simple-agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.6.0"
]

[project.scripts]
simple_agent = "simple_agent.main:run"
run_crew = "simple_agent.main:run"
train = "simple_agent.main:train"
replay = "simple_agent.main:replay"
test = "simple_agent.main:test"
run_with_trigger = "simple_agent.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
